# indi1524

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/indi1524/: __init__.py  indi1524.py
tests/: test_indi1524.py
