[tool.poetry]
name = "indi1524"
version = "0.1.0"
description = "A package for individual assignment 1"
authors = ["Ximin Xu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
